[tool.poetry]
name = "shynet"
version = "0.13.1"
description = "Modern, privacy-friendly, and cookie-free web analytics."
authors = ["R. Miles McCain <github@sendmiles.email>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5"
geoip2 = "^4.8.0"
whitenoise = "^6.0.0"
celery = "^5.2.2"
django-ipware = "^6.0.0"
PyYAML = "6.0.1"
user-agents = "^2.2.0"
rules = "^3.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.2"
redis = "^3.5.3"
django-redis-cache = "^3.0.0"
pycountry = "^23"
html2text = "^2024.0.0"
django-health-check = "^3.16.4"
django-npm = "^1.0.0"
python-dotenv = "^1.0.0"
django-debug-toolbar = "^4.0.0"
django-cors-headers = "^4.0.0"
packaging = "^24.0"
django-allauth = "^0.63.3"

[tool.poetry.dev-dependencies]
pytest-sugar = "^1.0.0"
factory-boy = "^3.3.0"
pytest-django = "^4.4.0"
django-coverage-plugin = "^3.0.0"
django-stubs = "^1.8.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
