[tool.poetry]
name = "shynet"
version = "0.13.1"
description = "Modern, privacy-friendly, and cookie-free web analytics."
authors = ["R. Miles McCain <github@sendmiles.email>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5"
geoip2 = "^4.8.0"
whitenoise = "^6.0.0"
celery = "^5.2.2"
django-ipware = "^7.0.0"
PyYAML = "6.0.2"
user-agents = "^2.2.0"
rules = "^3.0"
gunicorn = "^23.0.0"
redis = "^5.0.0"
pycountry = "^24.0.0"
html2text = "^2024.0.0"
django-health-check = "^3.16.4"
django-npm = "^1.0.0"
python-dotenv = "^1.0.0"
django-debug-toolbar = "^4.0.0"
django-cors-headers = "^4.0.0"
packaging = "^24.0"
django-allauth = "^64.0.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
django-axes = {extras = ["ipware"], version = "^7.0.0"}

[tool.poetry.dev-dependencies]
pytest-sugar = "^1.0.0"
factory-boy = "^3.3.0"
pytest-django = "^4.4.0"
django-coverage-plugin = "^3.0.0"
django-stubs = "^5.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
