[project]
name = "shynet"
version = "2025.1.0"
description = "Modern, privacy-friendly, and cookie-free web analytics."
authors = [
    {name = "StarkZarn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "geoip2 (>=5.0.1,<6.0.0)",
    "whitenoise (>=6.8.2,<7.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "django-ipware (>=7.0.1,<8.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "user-agents (>=2.2.0,<3.0.0)",
    "rules (>=3.5,<4.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "html2text (>=2024.2.26,<2025.0.0)",
    "django-health-check (>=3.18.3,<4.0.0)",
    "django-npm (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "packaging (>=24.2,<25.0)",
    "django-allauth (>=65.3.1,<66.0.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "django-axes[ipware] (>=7.0.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^1.0.0"
factory-boy = "^3.3.1"
pytest-django = "^4.9.0"
django-coverage-plugin = "^3.1.0"
django-stubs = "^5.1.2"
mypy = "^1.14.1"

[tool.black]
line-length = 88